load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "10026_red_green_blindness",
    hdrs = ["10026_red_green_blindness.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10101_remember_triangle",
    hdrs = ["10101_remember_triangle.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10171_cat",
    hdrs = ["10171_cat.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10172_dog",
    hdrs = ["10172_dog.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10181_federation_favorites",
    hdrs = ["10181_federation_favorites.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10275_gold_rush",
    hdrs = ["10275_gold_rush.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10480_oddities",
    hdrs = ["10480_oddities.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10718_we_love_kriii",
    hdrs = ["10718_we_love_kriii.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10757_big_number_a_plus_b",
    hdrs = ["10757_big_number_a_plus_b.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10768_special_day",
    hdrs = ["10768_special_day.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10773_zero",
    hdrs = ["10773_zero.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10797_10_days_rotation_system",
    hdrs = ["10797_10_days_rotation_system.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10798_vertical_reading",
    hdrs = ["10798_vertical_reading.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10807_counting",
    hdrs = ["10807_counting.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10808_number_of_alphabet",
    hdrs = ["10808_number_of_alphabet.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10809_find_alphabet",
    hdrs = ["10809_find_alphabet.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10810_put_ball_in",
    hdrs = ["10810_put_ball_in.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10811_reverse_buckets",
    hdrs = ["10811_reverse_buckets.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10813_change_ball",
    hdrs = ["10813_change_ball.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10814_age_stable_sort",
    hdrs = ["10814_age_stable_sort.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10815_number_cards",
    hdrs = ["10815_number_cards.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10816_number_cards_2",
    hdrs = ["10816_number_cards_2.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10817_three_numbers",
    hdrs = ["10817_three_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10820_string_analysis",
    hdrs = ["10820_string_analysis.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10824_four_numbers",
    hdrs = ["10824_four_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10826_fibonacci_number_4",
    hdrs = ["10826_fibonacci_number_4.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10828_stack",
    hdrs = ["10828_stack.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10844_easy_stair_numbers",
    hdrs = ["10844_easy_stair_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10845_queue",
    hdrs = ["10845_queue.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10867_sort_except_repeated_numbers",
    hdrs = ["10867_sort_except_repeated_numbers.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10926_surprise",
    hdrs = ["10926_surprise.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10987_number_of_vowel",
    hdrs = ["10987_number_of_vowel.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10988_check_palindrome",
    hdrs = ["10988_check_palindrome.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10989_sorting_numbers_3",
    hdrs = ["10989_sorting_numbers_3.h"],
    visibility = ["//10000/tests:__pkg__"],
)

cc_library(
    name = "10995_print_star_20",
    hdrs = ["10995_print_star_20.h"],
    visibility = ["//10000/tests:__pkg__"],
)
