load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "10171_cat_test",
    srcs = ["10171_cat_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10171_cat",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10172_dog_test",
    srcs = ["10172_dog_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10172_dog",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10480_oddities_test",
    srcs = ["10480_oddities_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10480_oddities",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10718_we_love_kriii_test",
    srcs = ["10718_we_love_kriii_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10718_we_love_kriii",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10757_big_number_a_plus_b_test",
    srcs = ["10757_big_number_a_plus_b_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10757_big_number_a_plus_b",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10773_zero_test",
    srcs = ["10773_zero_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10773_zero",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10798_vertical_reading_test",
    srcs = ["10798_vertical_reading_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10798_vertical_reading",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10807_counting_test",
    srcs = ["10807_counting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10807_counting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10810_put_ball_in_test",
    srcs = ["10810_put_ball_in_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10810_put_ball_in",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10811_reverse_bucket_test",
    srcs = ["10811_reverse_bucket_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10811_reverse_buckets",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10813_change_ball_test",
    srcs = ["10813_change_ball_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10813_change_ball",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10815_number_cards_test",
    srcs = ["10815_number_cards_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10815_number_cards",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10824_four_numbers_test",
    srcs = ["10824_four_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10824_four_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10826_fibonacci_number_4_test",
    srcs = ["10826_fibonacci_number_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10826_fibonacci_number_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10828_stack_test",
    srcs = ["10828_stack_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10828_stack",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10844_easy_stair_numbers_test",
    srcs = ["10844_easy_stair_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10844_easy_stair_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10845_queue_test",
    srcs = ["10845_queue_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10845_queue",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10926_surprise_test",
    srcs = ["10926_surprise_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10926_surprise",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10988_check_palindrome_test",
    srcs = ["10988_check_palindrome_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10988_check_palindrome",
        "@googletest//:gtest_main",
    ],
)
