load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "10026_red_green_blindness_test",
    srcs = ["10026_red_green_blindness_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10026_red_green_blindness",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10101_remember_triangle_test",
    srcs = ["10101_remember_triangle_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10101_remember_triangle",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10171_cat_test",
    srcs = ["10171_cat_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10171_cat",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10172_dog_test",
    srcs = ["10172_dog_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10172_dog",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10181_federation_favorites_test",
    srcs = ["10181_federation_favorites_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10181_federation_favorites",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10275_gold_rush_test",
    srcs = ["10275_gold_rush_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10275_gold_rush",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10480_oddities_test",
    srcs = ["10480_oddities_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10480_oddities",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10718_we_love_kriii_test",
    srcs = ["10718_we_love_kriii_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10718_we_love_kriii",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10757_big_number_a_plus_b_test",
    srcs = ["10757_big_number_a_plus_b_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10757_big_number_a_plus_b",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10768_special_day_test",
    srcs = ["10768_special_day_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10768_special_day",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10773_zero_test",
    srcs = ["10773_zero_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10773_zero",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10797_10_days_rotation_system_test",
    srcs = ["10797_10_days_rotation_system_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10797_10_days_rotation_system",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10798_vertical_reading_test",
    srcs = ["10798_vertical_reading_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10798_vertical_reading",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10807_counting_test",
    srcs = ["10807_counting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10807_counting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10808_number_of_alphabet_test",
    srcs = ["10808_number_of_alphabet_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10808_number_of_alphabet",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10809_find_alphabet_test",
    srcs = ["10809_find_alphabet_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10809_find_alphabet",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10810_put_ball_in_test",
    srcs = ["10810_put_ball_in_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10810_put_ball_in",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10811_reverse_bucket_test",
    srcs = ["10811_reverse_bucket_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10811_reverse_buckets",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10813_change_ball_test",
    srcs = ["10813_change_ball_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10813_change_ball",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10814_age_stable_sort_test",
    srcs = ["10814_age_stable_sort_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10814_age_stable_sort",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10815_number_cards_test",
    srcs = ["10815_number_cards_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10815_number_cards",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10816_number_cards_2_test",
    srcs = ["10816_number_cards_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10816_number_cards_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10817_three_numbers_test",
    srcs = ["10817_three_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10817_three_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10820_string_analysis_test",
    srcs = ["10820_string_analysis_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10820_string_analysis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10824_four_numbers_test",
    srcs = ["10824_four_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10824_four_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10826_fibonacci_number_4_test",
    srcs = ["10826_fibonacci_number_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10826_fibonacci_number_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10828_stack_test",
    srcs = ["10828_stack_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10828_stack",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10844_easy_stair_numbers_test",
    srcs = ["10844_easy_stair_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10844_easy_stair_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10845_queue_test",
    srcs = ["10845_queue_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10845_queue",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10867_sort_except_repeated_numbers_test",
    srcs = ["10867_sort_except_repeated_numbers_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10867_sort_except_repeated_numbers",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10926_surprise_test",
    srcs = ["10926_surprise_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10926_surprise",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10987_number_of_vowel_test",
    srcs = ["10987_number_of_vowel_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10987_number_of_vowel",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10988_check_palindrome_test",
    srcs = ["10988_check_palindrome_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10988_check_palindrome",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10989_sorting_numbers_3_test",
    srcs = ["10989_sorting_numbers_3_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10989_sorting_numbers_3",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "10995_print_star_20_test",
    srcs = ["10995_print_star_20_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//10000/src:10995_print_star_20",
        "@googletest//:gtest_main",
    ],
)