load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "11005_base_conversion_2",
    hdrs = ["11005_base_conversion_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11047_coin_0",
    hdrs = ["11047_coin_0.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11051_binomial_coefficient_2",
    hdrs = ["11051_binomial_coefficient_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11053_longest_increasing_subsequence",
    hdrs = ["11053_longest_increasing_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11054_longest_bitonic_subsequence",
    hdrs = ["11054_longest_bitonic_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11091_use_all_alphabets",
    hdrs = ["11091_use_all_alphabets.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11104_fridge_of_your_dreams",
    hdrs = ["11104_fridge_of_your_dreams.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11113_the_traveling_orienteerer",
    hdrs = ["11113_the_traveling_orienteerer.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11121_communication_channels",
    hdrs = ["11121_communication_channels.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11131_balancing_weights",
    hdrs = ["11131_balancing_weights.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11161_negative_people_in_da_house",
    hdrs = ["11161_negative_people_in_da_house.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11399_atm",
    hdrs = ["11399_atm.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11651_sorting_coordinates_2",
    hdrs = ["11651_sorting_coordinates_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11654_ascii_code",
    hdrs = ["11654_ascii_code.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11718_print_as_it_is",
    hdrs = ["11718_print_as_it_is.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11719_print_as_it_is_2",
    hdrs = ["11719_print_as_it_is_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11722_longest_decreasing_subsequence",
    hdrs = ["11722_longest_decreasing_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library( 
    name = "11724_number_of_connected_components",
    hdrs = ["11724_number_of_connected_components.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11726_2_by_n_tiling",
    hdrs = ["11726_2_by_n_tiling.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11727_2_by_n_tiling_2",
    hdrs = ["11727_2_by_n_tiling_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11866_Josephus_problem_0",
    hdrs = ["11866_Josephus_problem_0.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11880_ant",
    hdrs = ["11880_ant.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11948_subject_selection",
    hdrs = ["11948_subject_selection.h"],
    visibility = ["//11000/tests:__pkg__"],
)
