load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "11004_kth_number",
    hdrs = ["11004_kth_number.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11005_base_conversion_2",
    hdrs = ["11005_base_conversion_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11034_three_kangaroo2",
    hdrs = ["11034_three_kangaroo2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11047_coin_0",
    hdrs = ["11047_coin_0.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11051_binomial_coefficient_2",
    hdrs = ["11051_binomial_coefficient_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11053_longest_increasing_subsequence",
    hdrs = ["11053_longest_increasing_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11054_longest_bitonic_subsequence",
    hdrs = ["11054_longest_bitonic_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11091_use_all_alphabets",
    hdrs = ["11091_use_all_alphabets.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11104_fridge_of_your_dreams",
    hdrs = ["11104_fridge_of_your_dreams.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11113_the_traveling_orienteerer",
    hdrs = ["11113_the_traveling_orienteerer.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11117_letter_cookies",
    hdrs = ["11117_letter_cookies.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11121_communication_channels",
    hdrs = ["11121_communication_channels.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11131_balancing_weights",
    hdrs = ["11131_balancing_weights.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11149_decode_the_message",
    hdrs = ["11149_decode_the_message.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11161_negative_people_in_da_house",
    hdrs = ["11161_negative_people_in_da_house.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11170_number_of_zero",
    hdrs = ["11170_number_of_zero.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11176_in_the_shower",
    hdrs = ["11176_in_the_shower.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11195_peragrams",
    hdrs = ["11195_peragrams.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11365_secret",
    hdrs = ["11365_secret.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11399_atm",
    hdrs = ["11399_atm.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11549_identifying_tea",
    hdrs = ["11549_identifying_tea.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11568_scheme",
    hdrs = ["11568_scheme.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11650_sorting_coordinates",
    hdrs = ["11650_sorting_coordinates.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11651_sorting_coordinates_2",
    hdrs = ["11651_sorting_coordinates_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11654_ascii_code",
    hdrs = ["11654_ascii_code.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11655_rot13",
    hdrs = ["11655_rot13.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11657_time_machine",
    hdrs = ["11657_time_machine.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11659_finding_sum_of_intervals_4",
    hdrs = ["11659_finding_sum_of_intervals_4.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11660_finding_sum_of_intervals_5",
    hdrs = ["11660_finding_sum_of_intervals_5.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11665_cubic_intersection",
    hdrs = ["11665_cubic_intersection.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11718_print_as_it_is",
    hdrs = ["11718_print_as_it_is.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11719_print_as_it_is_2",
    hdrs = ["11719_print_as_it_is_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11721_print_disconnect_ten",
    hdrs = ["11721_print_disconnect_ten.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11722_longest_decreasing_subsequence",
    hdrs = ["11722_longest_decreasing_subsequence.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library( 
    name = "11724_number_of_connected_components",
    hdrs = ["11724_number_of_connected_components.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11725_find_parent_of_tree",
    hdrs = ["11725_find_parent_of_tree.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11726_2_by_n_tiling",
    hdrs = ["11726_2_by_n_tiling.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11727_2_by_n_tiling_2",
    hdrs = ["11727_2_by_n_tiling_2.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11866_Josephus_problem_0",
    hdrs = ["11866_Josephus_problem_0.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11880_ant",
    hdrs = ["11880_ant.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11943_move_files",
    hdrs = ["11943_move_files.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11944_nn",
    hdrs = ["11944_nn.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11945_hot_crucian_breads",
    hdrs = ["11945_hot_crucian_breads.h"],
    visibility = ["//11000/tests:__pkg__"],
)

cc_library(
    name = "11948_subject_selection",
    hdrs = ["11948_subject_selection.h"],
    visibility = ["//11000/tests:__pkg__"],
)
