load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "11005_base_conversion_2_test",
    srcs = ["11005_base_conversion_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11005_base_conversion_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(    
    name = "11047_coin_0_test",
    srcs = ["11047_coin_0_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11047_coin_0",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11051_binomial_coefficient_2_test",
    srcs = ["11051_binomial_coefficient_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11051_binomial_coefficient_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11053_longest_increasing_subsequence_test",
    srcs = ["11053_longest_increasing_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11053_longest_increasing_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11054_longest_bitonic_subsequence_test",
    srcs = ["11054_longest_bitonic_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11054_longest_bitonic_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11399_atm_test",
    srcs = ["11399_atm_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11399_atm",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11651_sorting_coordinates_2_test",
    srcs = ["11651_sorting_coordinates_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11651_sorting_coordinates_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11654_ascii_code_test",
    srcs = ["11654_ascii_code_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11654_ascii_code",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11718_print_as_it_is_test",
    srcs = ["11718_print_as_it_is_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11718_print_as_it_is",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11722_longest_decreasing_subsequence_test",
    srcs = ["11722_longest_decreasing_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11722_longest_decreasing_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11726_2_by_n_tiling_test",
    srcs = ["11726_2_by_n_tiling_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11726_2_by_n_tiling",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11727_2_by_n_tiling_2_test",
    srcs = ["11727_2_by_n_tiling_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11727_2_by_n_tiling_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11866_Josephus_problem_0_test",
    srcs = ["11866_Josephus_problem_0_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11866_Josephus_problem_0",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11948_subject_selection_test",
    srcs = ["11948_subject_selection_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11948_subject_selection",
        "@googletest//:gtest_main",
    ],
)
